  * on Windows and MacOS X the native file selection dialog is used
    instead of the FLTK one; also, the last PRG and screenshot file
    selected is remembered by the dialogs
  * various improvements have been made to the utilities
  * changed the TED luminance table to (hopefully) match the colors of
    the real machine more accurately
  * D64 files with any number of tracks from 35 to 42 are supported
  * new/improved GUI keyboard shortcuts
  * the old file I/O hack has been removed, since its functionality is
    now replaced by the IEC level drive emulation
  * added Gtk+ GUI theme (enabled with '-colorscheme 3' command line
    option)
  * some minor bugs have been fixed

Changes in version 1.2.5.2
--------------------------

  * fixed some minor TED emulation bugs

Changes in version 1.2.5.1
--------------------------

  * the full speed mode (Alt+W) now restores the original speed setting
    when turned off
  * added a "go to program counter" button to the disassembler in the
    debugger
  * some new utilities have been added
  * a few minor bugs have been fixed

Changes in version 1.2.5
------------------------

  * implemented Lua scripting in the debugger; this makes it possible to
    write complex rules for breakpoints, but can have other uses as
    well, since the script can read and write memory and CPU registers,
    in addition to having access to the standard Lua library functions
  * changed the debugger window layout so that there is a larger window
    with only two tabs
  * the disassembly view in the debugger now allows for paging backward,
    and the disassembly and memory dump displays can also be scrolled
    with the mouse wheel
  * made the serial bus delay for the 1541 high timing accuracy mode
    adjustable; while the default setting works with all the disk turbos
    tested so far, this option may be useful for debugging purposes
  * when using audio files as tape images, the signal read or written