@@ -1,6 +1,6 @@
 
 // plus4emu -- portable Commodore Plus/4 emulator
-// Copyright (C) 2003-2007 Istvan Varga <istvanv@users.sourceforge.net>
+// Copyright (C) 2003-2008 Istvan Varga <istvanv@users.sourceforge.net>
 // http://sourceforge.net/projects/plus4emu/
 //
 // This program is free software; you can redistribute it and/or modify
@@ -163,7 +163,7 @@ namespace Plus4Emu {
     VideoCaptureFrameBuffer outputFrameBuf; // 384x288
     uint32_t    *frameSizes;
     int         cycleCnt;
-    uint8_t     *colormap;      // 512 entries, 0..255: PAL, 256..511: NTSC
+    VideoDisplayColormap<uint8_t> colormap;
     // ----------------
    protected:
     virtual void decodeLine(int lineNum);
